# tictactoe

./: .gitignore  CMakeLists.txt  README.md  TicTacToe.c  build.bat  buildrun.bat  clean.bat  init.bat  run.bat  script.bat  test.bat
commands/: build.py  clean.py  greet.py  init.py  start.py  test-hook.py  test.py
commands/config/: config.py
commands/lib/: get_test_id.py
commands/procedures/: build.py  initialize.py  test.py
src/: TicTacToe.c  TicTacToe.test.c  TicTacToeTest.c  config.h  main.c
src/App/: App.c  App.h
src/board/: Board.c  Board.h
src/greeter/: Greeter.c  Greeter.h  Greeter.test.c
src/i18n/: en.h
src/model/Game/: Game.c  Game.h  Game.test.c
src/model/GameState/: GameState.c  GameState.h  GameState.test.c
src/model/Move/: Move.c  Move.h  Move.test.c
src/models/Board/: Board.c  Board.h  Board.test.c
src/models/Game/: Game.c  Game.h  Game.test.c
src/models/Move/: Move.c  Move.h  Move.test.c
src/modulea/: DumbExample.c  DumbExample.h  Helper.c  Helper.test.c  HelperTest.c  TestDumbExample.c
src/moduleb/: Helper.c  Helper.test.c
src/moduleb/submodulea/: AnotherHelper.c  AnotherHelper.test.c
src/services/AppService/: AppService.c  AppService.h  AppService.test.c
src/services/GameService/: GameService.c  GameService.h
src/services/GameStatusAnalyzer/: GameStatusAnalyzer.c  GameStatusAnalyzer.h  GameStatusAnalyzer.test.c
src/services/GameStatusAnalyzerOld/: GameStatusAnalyzerOld.c  GameStatusAnalyzerOld.h  GameStatusAnalyzerOld.test.c
src/services/InputBuffer/: InputBuffer.c  InputBuffer.h  InputBuffer.test.c
src/services/MoveInputParser/: MoveInputParser.c  MoveInputParser.h  MoveInputParser.test.c
src/services/MoveService/: MoveService.h
src/services/MoveValidator/: MoveValidator.c  MoveValidator.h  MoveValidator.test.c
src/services/MoveValidatorOld/: MoveValidatorOld.c  MoveValidatorOld.h  MoveValidatorOld.test.c
src/support/Byte/: Byte.h  Byte.test.c
src/support/macros/: safe_malloc.h
src/support/utils/Byte/: Byte.c
src/types/: Game.h  Move.h  TicTacToe.h
src/util/: safe_malloc.c
src/utils/ByteUtil/: ByteUtil.c  ByteUtil.h  ByteUtil.test.c
src/utils/GameUtil/: GameUtil.c  GameUtil.h  GameUtil.test.c
src/utils/MoveUtil/: MoveUtil.c  MoveUtil.h  MoveUtil.test.c
src/view/: BoardView.c  BoardView.h  BoardView.test.c  BoardViewRenderer.c  BoardViewRenderer.test.c
src/view/BoardRenderer/: BoardRenderer.c  BoardRenderer.h  BoardRenderer.test.c
src/view/BoardView/: BoardView.c  BoardView.h  BoardView.test.c
src/view/BoardView/BoardRenderer/: BoardRenderer.c  BoardRenderer.h  BoardRenderer.test.c
src/view/BoardView/BoardViewMapper/: BoardViewMapper.c  BoardViewMapper.h  BoardViewMapper.test.c
src/view/GameView/: GameView.c  GameView.h  ascii_art_title.h
src/view/models/: BoardView.c
stubs/Board/: Board.c  Board.h
stubs/Game/: Game.c  Game.h
